k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: external-deployments
   labels:
      name: external-deployments
      app: external-deployments
      environment: production
