k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: wellness-connect-api-service
   namespace: ${NAMESPACE}
   labels:
      app: wellness-connect-api
      component: api
spec:
   type: ClusterIP
   sessionAffinity: ClientIP
   sessionAffinityConfig:
      clientIP:
         timeoutSeconds: 3600
   ports:
      - port: 80
        targetPort: 8000
        protocol: TCP
        name: http
   selector:
      app: wellness-connect-api
